--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "accounting": "^0.4.1",
+    "firebase": "^9.9.3",
     "react": "^18.2.0",
     "react-classes": "^1.1.1",
     "react-dom": "^18.2.0",
